syntax = "proto3";

option java_package = "az.etibarli.grpc";
option java_multiple_files = true;

message PersonRequest {
  int32 id = 1;
}

message PersonResponse {
  int32 id = 1;
  string name = 2;
}

service PersonService {
  // server-side streaming
  rpc getPeople(PersonRequest) returns(stream PersonResponse);
}